Fix: scroll on mobile devices

--- a/app/styles/socials.module.css
+++ b/app/styles/socials.module.css
@@ -1,13 +1,12 @@
 .container {
-  position: absolute;
-  inset: 0;
   max-width: 40rem;
-  margin: 0 auto;
-  padding: min(15vh, 15rem) 1rem 1rem;
+  min-height: 100vh;
+  padding: 1rem;
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: space-between;
+  justify-content: space-around;
+  margin: 0 auto;
 }
 
 .logo_links_container {
